--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -41,5 +41,6 @@
     <bool name="config_supportBatteryHealth">true</bool>
     <string name="config_batteryCalculatedCapacity">/sys/class/power_supply/bms/charge_full</string>
    
-
+ <!-- Maintainer info. -->  
+    <string name="bliss_maintainer">@maxx459</string>
 </resources>
