rova: overlay: Add restart SystemUI in Advanced Reboot
Signed-off-by: iusmac <iusico.maxim@libero.it>

--- a/overlay-aosp/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-aosp/lineage-sdk/lineage/res/res/values/config.xml
@@ -63,6 +63,7 @@
         <item>restart_recovery</item>
         <item>restart_bootloader</item>
         <item>restart_fastboot</item>
+        <item>restart_systemui</item>
      </string-array>
 
     <!-- The list of components which should be automatically disabled for a specific device.
