rova : parts: Drop PocketJudge

--- a/overlay/frameworks/base/core/res/res/values/cr_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/cr_config.xml
@@ -16,7 +16,8 @@
 -->
 <resources>
     <!-- Pocket Lock -->
-    <bool name="config_pocketModeSupported">false</bool>
+      <bool name="config_pocketModeSupported">true</bool>
+      <bool name="config_pocketUseLightSensor">true</bool>
 
     <!-- Whether device supports sensor based doze customizations -->
     <bool name="config_dozePulsePickup">true</bool>
