--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -25,4 +25,7 @@
          Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
          -->
     <dimen name="status_bar_height_portrait">30dp</dimen>
+
+    <!-- Height of area above QQS where battery/time go. -->
+    <dimen name="quick_qs_offset_height">30dp</dimen>
 </resources>
